Please view this file on the master branch, on stable branches it's out of date.

v 8.13.0 (unreleased)
  - Speed-up group milestones show page
  - Fix robots.txt disallowing access to groups starting with "s" (Matt Harrison)
  - Revoke button in Applications Settings underlines on hover.
  - Add organization field to user profile

v 8.12.2 (unreleased)
  - Fix Import/Export not recognising correctly the imported services.
  - Fix snippets pagination
  - Fix List-Unsubscribe header in emails
  - Fix an issue with the "Commits" section of the cycle analytics summary. !6513
  - Fix errors importing project feature and milestone models using GitLab project import

v 8.12.1
  - Fix a memory leak in HTML::Pipeline::SanitizationFilter::WHITELIST
  - Fix issue with search filter labels not displaying
  - Fix bug where 'Search results' repeated many times when a search in the emoji search form is cleared (Xavier Bick) (@zeiv)

v 8.12.0
  - Update the rouge gem to 2.0.6, which adds highlighting support for JSX, Prometheus, and others. !6251
  - Only check :can_resolve permission if the note is resolvable
  - Bump fog-aws to v0.11.0 to support ap-south-1 region
  - Add ability to fork to a specific namespace using API. (ritave)
  - Allow to set request_access_enabled for groups and projects
  - Cleanup misalignments in Issue list view !6206
  - Only create a protected branch upon a push to a new branch if a rule for that branch doesn't exist
  - Prune events older than 12 months. (ritave)
  - Prepend blank line to `Closes` message on merge request linked to issue (lukehowell)
  - Fix issues/merge-request templates dropdown for forked projects
  - Filter tags by name !6121
  - Update gitlab shell secret file also when it is empty. !3774 (glensc)
  - Give project selection dropdowns responsive width, make non-wrapping.
  - Fix resolve discussion buttons endpoint path
  - Fix note form hint showing slash commands supported for commits.