@@ -21,6 +21,10 @@
   }
 }
 
+.hidden {
+  display: none;
+}
+
 // Hide element if Vue is still working on rendering it fully.
 [v-cloak="true"] {
   display: none !important;
